--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "an excellent UI library,built with Vue.js ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx parcel index.html --no-cache",
+    "dev-test": "parcel watch test/* --no-cache & karma start",
+    "test": "parcel build test/* --no-minify && karma start --single-run"
   },
   "repository": {
     "type": "git",
@@ -29,7 +31,16 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
+    "karma": "^4.1.0",
+    "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^2.0.2",
+    "mocha": "^6.1.4",
     "sass": "^1.18.0",
+    "sinon": "^7.3.2",
+    "sinon-chai": "^3.3.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
