--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ addons:
 sudo: required
 before_script:
   - "sudo chown root /opt/google/chrome/chrome-sandbox"
-  - "sudo chomd root /opt/google/chrome/chrome-sandbox"
+  - "sudo chomd 4755 /opt/google/chrome/chrome-sandbox"
