--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "npx parcel index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-minify && karma start --single-run",
-    "build": "npx parcel build index.js --no-cache --no-minify"
+    "build": "npx parcel build index.js --no-cache --no-minify",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "repository": {
     "type": "git",
@@ -26,7 +28,9 @@
   "dependencies": {
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
+    "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
+    "scss-loader": "0.0.1",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.3"
   },
@@ -39,7 +43,8 @@
     "karma-mocha": "^1.3.0",
     "karma-sinon-chai": "^2.0.2",
     "mocha": "^6.1.4",
-    "sass": "^1.18.0",
+    "sass": "^1.22.2",
+    "sass-loader": "^7.1.0",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
     "vue-template-compiler": "^2.6.10"
